tests/rosetta/out/Dart/bin-given-limits.error
run error: exit status 254
../../tests/rosetta/out/Dart/bin-given-limits.dart:59:52: Error: String starting with ' must end with '.
    print('Example ' + (i as num) + 1.toString() + '
                                                   ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:60:1: Error: String starting with ' must end with '.
');
^^^
../../tests/rosetta/out/Dart/bin-given-limits.dart:59:10: Error: Can't find ')' to match '('.
    print('Example ' + (i as num) + 1.toString() + '
         ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:67:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/bin-given-limits.dart:54:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/bin-given-limits.dart:6:48: Error: A value of type 'String' can't be assigned to a variable of type 'num'.
  while (i.toString().compareTo((n as num) + 1.toString()) < 0) {
                                               ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:6:44: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
  while (i.toString().compareTo((n as num) + 1.toString()) < 0) {
                                           ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:8:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:19:32: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
        index = (index as num) + 1;
                               ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:22:30: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      index = (index as num) + 1;
                             ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:24:40: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    bins[index] = (bins[index] as num) + 1;
                                       ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:25:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    j = (j as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:37:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:39:23: Error: A value of type 'num' can't be returned from a function with return type 'String'.
  return (out as num) + (s as num);
                      ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:47:45: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    print('>= ' + padLeft(limits[(i as num) - 1], 3) + ' and < ' + padLeft(limits[i], 3) + ' = ' + padLeft(bins[i], 2));
                                            ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:48:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:50:43: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
  print('>= ' + padLeft(limits[(n as num) - 1], 3) + '           = ' + padLeft(bins[n], 2));
                                          ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:60:1: Error: Expected ';' after this.
');
^^^
../../tests/rosetta/out/Dart/bin-given-limits.dart:59:27: Error: A value of type 'num' can't be assigned to a variable of type 'String'.
    print('Example ' + (i as num) + 1.toString() + '
                          ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:63:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:68:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/bin-given-limits.dart:92:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/bin-given-limits.dart:121:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/bin-given-limits.dart:126:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/bin-given-limits.dart:130:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
